--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ZSafeDB;User Id=sa;Password=Passw0rd1971;TrustServerCertificate=true;Encrypt=True"
+    "DefaultConnection": "Server=yamabiko.proxy.rlwy.net,31247;Database=ZSafeDB;User Id=sa;Password=Passw0rd1971;TrustServerCertificate=True;"
   },
   "ApiKey": "zsafe-secret-1234"
 }
