feat: update appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=yamabiko.proxy.rlwy.net,31247;Database=ZSafeDB;User Id=sa;Password=Passw0rd1971;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=switchyard.proxy.rlwy.net,18419;Database=ZSafeDB;User Id=sa;Password=Passw0rd1971;Encrypt=False;TrustServerCertificate=True;"
   },
   "ApiKey": "zsafe-secret-1234"
 }
